Search Overflow fixed

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -70,8 +70,11 @@ table.fixed td {
 
 .colony-search-container {
     grid-area   : 2 / 5 / auto / auto;
-    overflow-x  : hidden;
     width       : 20vw;
+}
+
+#colony-search-collapse-wrapper {
+    overflow: AUTO !important;
 }
 
 [data-toggle="collapse"] {
